metadata-sfdx/force-app/main/default/objects/Arbitration__c/Arbitration__c.object-meta.xml
<CustomObject>
    <description>Custom object to store information for the arbitration (e.g., FairClaims) activities related to a marketplace trust and safety incident.</description>
    <label>Arbitration</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arbitration</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>