metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/active__c.field-meta.xml
<CustomField>
    <fullName>active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>