metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/arbitrator_decision__c.field-meta.xml
<CustomField>
    <fullName>arbitrator_decision__c</fullName>
    <label>Arbitrator Decision</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>