metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/brief_description_of_dispute_respondent__c.field-meta.xml
<CustomField>
    <fullName>brief_description_of_dispute_respondent__c</fullName>
    <label>Brief Description of Dispute Respondent</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>