metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/CalloutResponseMessage__c.field-meta.xml
<CustomField>
    <fullName>CalloutResponseMessage__c</fullName>
    <label>Callout Response Message</label>
    <type>TextArea</type>
</CustomField>