metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/chat_active__c.field-meta.xml
<CustomField>
    <fullName>chat_active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chat Active</label>
    <type>Checkbox</type>
</CustomField>