metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/chat_end_time__c.field-meta.xml
<CustomField>
    <fullName>chat_end_time__c</fullName>
    <label>Chat End Time</label>
    <type>DateTime</type>
</CustomField>