metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/claim_amount__c.field-meta.xml
<CustomField>
    <fullName>claim_amount__c</fullName>
    <label>Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>