metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/claimant_confirmed_claim_paid__c.field-meta.xml
<CustomField>
    <fullName>claimant_confirmed_claim_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claimant Confirmed Claim Paid</label>
    <type>Checkbox</type>
</CustomField>