metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/claimant_email__c.field-meta.xml
<CustomField>
    <fullName>claimant_email__c</fullName>
    <label>Claimant Email</label>
    <type>Email</type>
</CustomField>