metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/claimant_first_name__c.field-meta.xml
<CustomField>
    <fullName>claimant_first_name__c</fullName>
    <label>Claimant First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>