metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/claimant_last_name__c.field-meta.xml
<CustomField>
    <fullName>claimant_last_name__c</fullName>
    <label>Claimant Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>