metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/claimant_phone__c.field-meta.xml
<CustomField>
    <fullName>claimant_phone__c</fullName>
    <label>Claimant Phone</label>
    <type>Phone</type>
</CustomField>