metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/ClaimId__c.field-meta.xml
<CustomField>
    <fullName>ClaimId__c</fullName>
    <label>Claim Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>