metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <description>Formula field to determine whether or not the Status of the arbitration is in a closed-like status.</description>
    <formula>IF(AND(RecordType.Name = "Arbitration", 
          OR(
            ISPICKVAL(Status__c, "Claimant did not sign up"),
            ISPICKVAL(Status__c, "Respondent did not sign up"),
            ISPICKVAL(Status__c, "Decision made"),
            ISPICKVAL(Status__c, "Settlement reached"),
            ISPICKVAL(Status__c, "Payment made"),
            ISPICKVAL(Status__c, "Completed")
            
              )
            ), True,
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>