metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/company_name_claimant__c.field-meta.xml
<CustomField>
    <fullName>company_name_claimant__c</fullName>
    <label>Company Name Claimant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>