metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/company_name_respondent__c.field-meta.xml
<CustomField>
    <fullName>company_name_respondent__c</fullName>
    <label>Company Name Respondent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>