metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/DateSubmitted__c.field-meta.xml
<CustomField>
    <fullName>DateSubmitted__c</fullName>
    <description>The date the pro/customer claim was filed with FairClaims.</description>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>