metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/deadline_arb_send_hearing_dates__c.field-meta.xml
<CustomField>
    <fullName>deadline_arb_send_hearing_dates__c</fullName>
    <label>Deadline ARB Send Hearing Dates</label>
    <type>DateTime</type>
</CustomField>