metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/deadline_for_claimant_signup__c.field-meta.xml
<CustomField>
    <fullName>deadline_for_claimant_signup__c</fullName>
    <label>Deadline for Claimant Signup</label>
    <type>DateTime</type>
</CustomField>