metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/deadline_for_decision__c.field-meta.xml
<CustomField>
    <fullName>deadline_for_decision__c</fullName>
    <label>Deadline for Decision</label>
    <type>DateTime</type>
</CustomField>