metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/deadline_for_hearing__c.field-meta.xml
<CustomField>
    <fullName>deadline_for_hearing__c</fullName>
    <label>Deadline for Hearing</label>
    <type>DateTime</type>
</CustomField>