metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/deadline_hearing_dates_reply__c.field-meta.xml
<CustomField>
    <fullName>deadline_hearing_dates_reply__c</fullName>
    <label>Deadline Hearing Dates Reply</label>
    <type>DateTime</type>
</CustomField>