metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/deadline_to_upload_evidence__c.field-meta.xml
<CustomField>
    <fullName>deadline_to_upload_evidence__c</fullName>
    <label>Deadline to Upload Evidence</label>
    <type>DateTime</type>
</CustomField>