metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/decision_amount__c.field-meta.xml
<CustomField>
    <fullName>decision_amount__c</fullName>
    <label>Decision Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>