metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/decision_date__c.field-meta.xml
<CustomField>
    <fullName>decision_date__c</fullName>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>