metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/decision_summary__c.field-meta.xml
<CustomField>
    <fullName>decision_summary__c</fullName>
    <label>Decision Summary</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>