metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/dispute_amount__c.field-meta.xml
<CustomField>
    <fullName>dispute_amount__c</fullName>
    <label>Dispute Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>