metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/dispute_channels__c.field-meta.xml
<CustomField>
    <fullName>dispute_channels__c</fullName>
    <label>Dispute Channels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>arbitration_with_chat</fullName>
            </value>
            <value>
                <fullName>chat_only</fullName>
            </value>
            <value>
                <fullName>arbitration_only</fullName>
                <isActive>false</isActive>
                <label>arbitration_only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>