metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/dispute_code__c.field-meta.xml
<CustomField>
    <fullName>dispute_code__c</fullName>
    <externalId>true</externalId>
    <label>Dispute Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>