metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/finalized__c.field-meta.xml
<CustomField>
    <fullName>finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finalized</label>
    <type>Checkbox</type>
</CustomField>