metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/full_description_of_dispute_respondent__c.field-meta.xml
<CustomField>
    <fullName>full_description_of_dispute_respondent__c</fullName>
    <label>Full Description of Dispute Respondent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>