metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/hearing_date__c.field-meta.xml
<CustomField>
    <fullName>hearing_date__c</fullName>
    <label>Hearing Date</label>
    <type>Date</type>
</CustomField>