metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the MI Incident</description>
    <label>Incident</label>
    <referenceTo>MIIncident__c</referenceTo>
    <relationshipName>IncidentArbitrations</relationshipName>
    <type>Lookup</type>
</CustomField>