metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/legal_issue__c.field-meta.xml
<CustomField>
    <fullName>legal_issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Issue</label>
    <type>Checkbox</type>
</CustomField>