metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/partner_id__c.field-meta.xml
<CustomField>
    <fullName>partner_id__c</fullName>
    <label>Partner Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>