metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/ProspectId__c.field-meta.xml
<CustomField>
    <fullName>ProspectId__c</fullName>
    <label>Prospect Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>