metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/respondent_email__c.field-meta.xml
<CustomField>
    <fullName>respondent_email__c</fullName>
    <label>Respondent Email</label>
    <type>Email</type>
</CustomField>