metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/respondent_first_name__c.field-meta.xml
<CustomField>
    <fullName>respondent_first_name__c</fullName>
    <label>Respondent First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>