metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/respondent_last_name__c.field-meta.xml
<CustomField>
    <fullName>respondent_last_name__c</fullName>
    <label>Respondent Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>