metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/respondent_phone__c.field-meta.xml
<CustomField>
    <fullName>respondent_phone__c</fullName>
    <label>Respondent Phone</label>
    <type>Phone</type>
</CustomField>