metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/respondent_said_claim_paid__c.field-meta.xml
<CustomField>
    <fullName>respondent_said_claim_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Respondent Said Claim Paid</label>
    <type>Checkbox</type>
</CustomField>