metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/respondent_status__c.field-meta.xml
<CustomField>
    <fullName>respondent_status__c</fullName>
    <label>respondent_status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>