metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/scheduling_next_step__c.field-meta.xml
<CustomField>
    <fullName>scheduling_next_step__c</fullName>
    <label>Scheduling Next Step</label>
    <type>TextArea</type>
</CustomField>