metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/settlement_reached__c.field-meta.xml
<CustomField>
    <fullName>settlement_reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Settlement Reached</label>
    <type>Checkbox</type>
</CustomField>