metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/signup_date_respondent__c.field-meta.xml
<CustomField>
    <fullName>signup_date_respondent__c</fullName>
    <label>Signup Date Respondent</label>
    <type>Date</type>
</CustomField>