metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Claimant signed up</fullName>
            </value>
            <value>
                <fullName>Respondent signed up</fullName>
            </value>
            <value>
                <fullName>Claimant did not sign up</fullName>
            </value>
            <value>
                <fullName>Respondent did not sign up</fullName>
            </value>
            <value>
                <fullName>Decision made</fullName>
            </value>
            <value>
                <fullName>Settlement reached</fullName>
            </value>
            <value>
                <fullName>Payment made</fullName>
            </value>
            <value>
                <fullName>Payment overdue</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>