metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/support_team_member_email__c.field-meta.xml
<CustomField>
    <fullName>support_team_member_email__c</fullName>
    <label>Support Team Member Email</label>
    <type>Email</type>
</CustomField>