metadata-sfdx/force-app/main/default/objects/Arbitration__c/fields/support_team_member_name__c.field-meta.xml
<CustomField>
    <fullName>support_team_member_name__c</fullName>
    <label>Support Team Member Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>