metadata-sfdx/force-app/main/default/objects/Arbitration__c/recordTypes/Arbitration.recordType-meta.xml
<RecordType>
    <fullName>Arbitration</fullName>
    <active>true</active>
    <description>Record type used to manage arbitration (e.g., Fairclaims) solutions.</description>
    <label>Arbitration</label>
</RecordType>